<resources>
    <string name="app_name">AlQuranApp</string>
    <string name="adzan">Adzan</string>
    <string name="quran">Quran</string>
    <string name="doa">Doa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_audio">Play Audio</string>
    <string name="pause_audio">Pause Audio</string>
    <string name="playing_audio">Playing Audio</string>
    <string name="audio_played">Audio Played</string>
    <string name="cancel">Cancel</string>
    <string name="imsak">Imsak</string>
    <string name="subuh">Subuh</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="ashar">Ashar</string>
    <string name="maghrib">Maghrib</string>
    <string name="isya">Isya</string>
</resources>