<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.adzan.AdzanFragment">

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintEnd_toStartOf="@+id/tc_time_local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/tc_time_local"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:format12Hour="hh:mm aa"
        android:format24Hour="HH:mm"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_location"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_next_adzan_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/surface_container"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_location" />

    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_next_adzan_time" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_adzan_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_countdown">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/surface_container"
                app:layout_constraintTop_toBottomOf="@+id/tv_date" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="32dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="32dp" />

            <TextView
                android:id="@+id/tv_imsak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/imsak"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/line_1" />

            <TextView
                android:id="@+id/tv_time_imsak"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_imsak"
                app:layout_constraintEnd_toStartOf="@id/guide_end" />

            <View
                android:id="@+id/line_imsak"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/surface_container"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_imsak" />

            <TextView
                android:id="@+id/tv_subuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/subuh"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/line_imsak" />

            <TextView
                android:id="@+id/tv_time_subuh"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_subuh"
                app:layout_constraintEnd_toStartOf="@id/guide_end" />

            <View
                android:id="@+id/line_subuh"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/surface_container"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_time_subuh" />

            <TextView
                android:id="@+id/tv_dzuhur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dzuhur"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/line_subuh" />

            <TextView
                android:id="@+id/tv_time_dzuhur"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_dzuhur"
                app:layout_constraintEnd_toStartOf="@id/guide_end" />

            <View
                android:id="@+id/line_dzuhur"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/surface_container"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_dzuhur" />

            <TextView
                android:id="@+id/tv_ashar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/ashar"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/line_dzuhur" />

            <TextView
                android:id="@+id/tv_time_ashar"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_ashar"
                app:layout_constraintEnd_toStartOf="@id/guide_end" />

            <View
                android:id="@+id/line_ashar"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/surface_container"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_ashar" />

            <TextView
                android:id="@+id/tv_maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/maghrib"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/line_ashar" />

            <TextView
                android:id="@+id/tv_time_maghrib"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_maghrib"
                app:layout_constraintEnd_toStartOf="@id/guide_end" />

            <View
                android:id="@+id/line_maghrib"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/surface_container"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_maghrib" />

            <TextView
                android:id="@+id/tv_isya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/isya"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/line_maghrib" />

            <TextView
                android:id="@+id/tv_time_isya"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_isya"
                app:layout_constraintEnd_toStartOf="@id/guide_end" />

            <View
                android:id="@+id/line_isya"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/surface_container"
                app:layout_constraintEnd_toStartOf="@id/guide_end"
                app:layout_constraintStart_toEndOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/tv_isya" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>